Added geojson loading

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
     <body>
         <div id="map" class="map" tabindex="0"></div>
+        <input type="file" id="fileDialog">
         <script type="module" src="main.ts"></script>
     </body>
 </html>
