Added tiny box with the grid side configuration

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,17 @@
 <html>
-    <body>
-        <div id="map" class="map" tabindex="0"></div>
-        <input type="file" id="fileDialog">
-        <script type="module" src="main.ts"></script>
-    </body>
+
+<body>
+    <div id="map" class="map" tabindex="0"></div>
+    <input type="file" id="fileDialog">
+    <div class="toolbox">
+        <div class="row">
+            <div class="name">Size, m</div>
+            <div class="value">
+                <input type="text" id="gridsize">
+            </div>
+        </div>
+    </div>
+    <script type="module" src="main.ts"></script>
+</body>
+
 </html>
