Default value for grid size

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="name">Size, m</div>
             <div class="value">
-                <input type="text" id="gridsize">
+                <input type="text" id="gridsize" value="50">
             </div>
         </div>
     </div>
