Added small geojson viewer for selected features

--- a/src/index.html
+++ b/src/index.html
@@ -6,18 +6,19 @@
 </head>
 
 <body>
-    <header>Header</header>
+    <header>Mapslicer</header>
     <nav>
-        <div class="caption">Parameters</div>
+        <div class="caption">Settings</div>
         <div class="toolbox">
             <div class="row">
-                <div class="name">Size, m</div>
+                <div class="name">Grid size, m</div>
                 <div class="value">
                     <input type="text" id="gridsize" value="50">
                 </div>
             </div>
         </div>
-        <div class="caption">Structure</div>
+        <div class="caption">Selected as GeoJSON</div>
+        <div class="featurebox"><pre>Featurebox</pre></div>
     </nav>
     <article>
         <div id="map" class="map" tabindex="0"></div>
