Added selected area information in the status bar

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                     </div>
                 </div>
             </div>
-            <div class="caption">Selected as GeoJSON</div>
+            <div class="caption">Selected</div>
             <div class="featurebox">
                 <pre>GeoJSON</pre>
             </div>
@@ -36,7 +36,9 @@
             </div>
             <div id="map" class="map" tabindex="0"></div>
         </article>
-        <footer>Footer</footer>
+        <footer>
+            Area: <span id="area"></span>
+        </footer>
     </div>
     <script type="module" src="main.ts"></script>
 </body>
