Added list for areas

--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,13 @@
                     </div>
                 </div>
             </div>
-            <div class="caption">Selected</div>
+            <div class="caption">Areas</div>
+            <div class="areabox">
+
+            </div>
+            <div class="caption">GeoJSON</div>
             <div class="featurebox">
-                <pre>GeoJSON</pre>
+                <pre></pre>
             </div>
         </nav>
         <article>
