Added feature editor and basic test for it

--- a/src/index.html
+++ b/src/index.html
@@ -25,12 +25,11 @@
                 </div>
             </div>
             <div class="caption">Areas</div>
-            <div class="areabox">
-
+            <div class="editbox">
             </div>
             <div class="caption">GeoJSON</div>
             <div class="featurebox">
-                <pre></pre>
+                <textarea></textarea>
             </div>
         </nav>
         <article>
