Added basic conditional styles for grid layers

--- a/src/index.html
+++ b/src/index.html
@@ -52,9 +52,9 @@
             <div class="controls">
                 <select>
                     <option>OSM</option>
-                    <option>Google</option>
-                    <option>Bing</option>
-                    <option>Satellite</option>
+                    <option>---</option>
+                    <option>---</option>
+                    <option>---</option>
                 </select>
             </div>
         </footer>
